apps/prod/workloads/web-portfolio-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-portfolio
  namespace: web-portfolio
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: gateway-system
  hostnames:
    - portfolio.home.joecool.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: web-portfolio
          port: 80
          weight: 1
